[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "and-otp-uri"
version = "0.0.2"
description = "Convert andOTP or GNOME Authenticator backups into otpauth-URIs"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
and-otp-uri = "and_otp_uri:main"

[project.urls]
Repository = "https://gitlab.com/zvyn/and-otp-uri"
